--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,6 +3,10 @@
     height: 80px;
     line-height: 5;
     padding-left: 25px;
+    position: fixed;
+    z-index: 10;
+    background: white;
+    box-shadow: 10px 0px 10px 2px rgb(157, 158, 158);
 }
 
 .headerSearch {
