--- a/src/styles/sideBar.css
+++ b/src/styles/sideBar.css
@@ -28,7 +28,8 @@
 
 .sideBarItem img {
     height: 100px;
-    width: 100px;
+    width: 100%;
+    padding: 0px 5px;
 }
 
 .makePurple {
